# describe

app/: populate_database.py  pyproject.toml  runserver.py  setup.cfg
app/describe/: __init__.py
app/describe/word/: api.py  domain.py  models.py  schema.py
